[gd_scene load_steps=7 format=3 uid="uid://bo7frcq6ymovg"]

[ext_resource type="Script" uid="uid://cc5q6nfkp7f11" path="res://scripts/chat_window.gd" id="1_nwrjk"]
[ext_resource type="Texture2D" uid="uid://b42vbrocmppbn" path="res://assets/Ninja Adventure - Asset Pack/Ui/Dialog/DialogBoxFaceset.png" id="2_a1bs7"]
[ext_resource type="Texture2D" uid="uid://d04opxkfjpx0d" path="res://assets/Ninja Adventure - Asset Pack/Ui/Dialog/DialogueBoxSimple.png" id="3_pkcf1"]
[ext_resource type="Texture2D" uid="uid://d377r0075tya7" path="res://assets/Ninja Adventure - Asset Pack/Actor/Characters/OldWoman/Faceset.png" id="4_dh2cy"]
[ext_resource type="Texture2D" uid="uid://cgx7kx33t88rq" path="res://assets/Ninja Adventure - Asset Pack/Ui/Arrow.png" id="6_2c65u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ee5nq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2c65u")
}],
"loop": true,
"name": &"point_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2c65u")
}],
"loop": true,
"name": &"point_up",
"speed": 5.0
}]

[node name="ChatWindow" type="CanvasLayer"]
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)
script = ExtResource("1_nwrjk")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 416.00006
offset_top = 224.33342
offset_right = 928.0
offset_bottom = 335.33337
scale = Vector2(0.5, 0.494)
texture = ExtResource("2_a1bs7")
region_rect = Rect2(0, 0, 300, 58)

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
offset_left = 418.00006
offset_top = 280.33344
offset_right = 926.0001
offset_bottom = 354.33344
scale = Vector2(0.5, 0.494)
texture = ExtResource("3_pkcf1")

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = 422.00006
offset_top = 222.33339
offset_right = 528.0
offset_bottom = 245.33339
scale = Vector2(0.5, 0.494)
text = "Name"

[node name="DialogueText" type="RichTextLabel" parent="."]
offset_left = 462.00006
offset_top = 239.33342
offset_right = 854.0001
offset_bottom = 295.33337
scale = Vector2(0.5, 0.494)
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "SPEECH"

[node name="Portrait" type="TextureRect" parent="."]
offset_left = 424.00006
offset_top = 241.33336
offset_right = 477.00006
offset_bottom = 302.33325
scale = Vector2(0.5, 0.494)
texture = ExtResource("4_dh2cy")

[node name="PlayerInput" type="LineEdit" parent="."]
offset_left = 425.00006
offset_top = 285.33337
offset_right = 901.0001
offset_bottom = 335.33337
scale = Vector2(0.5, 0.494)
theme_override_colors/font_color = Color(0, 0, 0, 1)
placeholder_text = "Input text"

[node name="ContinueIndicator" type="AnimatedSprite2D" parent="."]
position = Vector2(466.3749, 277.43887)
scale = Vector2(0.71153843, 0.63161546)
sprite_frames = SubResource("SpriteFrames_ee5nq")
animation = &"point_down"

[node name="OllamaRequest" type="HTTPRequest" parent="."]

[connection signal="text_submitted" from="PlayerInput" to="." method="_on_player_text_submitted"]
